--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "latest",
+    "@types/react-transition-group": "^4.4.4",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.3.0",
