--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "latest",
     "@types/react-transition-group": "^4.4.4",
+    "moment": "^2.29.3",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.3.0",
