--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "latest",
     "@types/react-transition-group": "^4.4.4",
     "moment": "^2.29.3",
+    "mui-image": "^1.0.7",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.3.0",
