--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "dependencies": {
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^7.0.0",
     "@mui/material": "latest",
-    "@types/react-transition-group": "^4.4.4",
-    "moment": "^2.29.3",
-    "mui-image": "^1.0.7",
+    "framer-motion": "^12.7.4",
+    "moment": "^2.29.0",
     "react": "latest",
     "react-dom": "latest",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "latest",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^8.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "latest"
