--- a/scripts/conf/veganbingo.net.conf
+++ b/scripts/conf/veganbingo.net.conf
@@ -1,14 +1,6 @@
-<VirtualHost *:80>
-    ServerAdmin web@camerongreen.org
-    DocumentRoot /var/www/veganbingo.net/build
-    ServerName veganbingo.net
-    ServerAlias www.veganbingo.net
-    ErrorLog ${APACHE_LOG_DIR}/veganbingo.net-error_log
-    CustomLog ${APACHE_LOG_DIR}/veganbingo.net-access_log common
+Include /var/www/veganbingo.net/scripts/conf/veganbingo-apache.macro
 
-    <Directory /var/www/veganbingo.net/build>
-      Options FollowSymLinks
-      AllowOverride All 
-      Require all granted
-    </Directory>
-</VirtualHost>
+Use VBVHost camerongreen.org 80
+Use VBVHostSSL camerongreen.org 443 
+
+Include /var/www/veganbingo.net/scripts/conf/veganbingo-apache-undef.macro
