--- a/scripts/conf/veganbingo.net.conf
+++ b/scripts/conf/veganbingo.net.conf
@@ -1,6 +1,6 @@
 Include /var/www/veganbingo.net/scripts/conf/veganbingo-apache.macro
 
-Use VBVHost camerongreen.org 80
-Use VBVHostSSL camerongreen.org 443 
+Use VBVHost veganbingo.net 80
+Use VBVHostSSL veganbingo.net 443 
 
 Include /var/www/veganbingo.net/scripts/conf/veganbingo-apache-undef.macro
